# cc-dev-framework

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  config.example.yaml  pyproject.toml
.cc-dev-framework/: .gitattributes  CLAUDE.md  archive.py  briefing.py  cleanup.sh  dev.sh  features.json  init.sh  main.py  orchestrator.py  prompts.py  status.py
.cc-dev-framework/core/: archive.py  complete.py  log.py  start.py  step.py  store.py
.cc-dev-framework/roles/: analyst.py  briefing.py  e2e_tester.py  executor.py  fixer.py  planner.py  preparer.py  prompts.py  validate_plan.py  verify.py
.cc-dev-framework/src/: archive.py  briefing.py  complete.py  start.py  step.py  store.py  validate_plan.py  verify.py
.cc-dev-framework/utils/: log.py
aifw/: __init__.py  cli.py  config.py  orchestrator.py
aifw/agents/: base.py  callbacks.py  coder.py  initializer.py  terminal_ui.py  verifier.py
aifw/prompts/: coder.md  initializer.md  verifier.md
aifw/state/: feature_store.py  progress.py  session.py
aifw/tools/: bash.py  file_ops.py  git.py  registry.py  state_tools.py
template/: CLAUDE.md
template/.cc-dev-framework/: CLAUDE.md  briefing.py  complete.py  features.json  orchestrator.py  prompts.py  seal.py  status.py  store.py  validate_plan.py  verify.py
template/.ccdev/: init.sh  progress.json  start.py  step.py  store.py
