[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifw"
version = "0.1.0"
description = "AI Agent Framework for long-running development tasks"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aifw = "aifw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aifw*"]
